--- a/lindex.html
+++ b/lindex.html
@@ -17,6 +17,8 @@
 			</div>
 		<script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
 		<script src="http://code.jquery.com/jquery-3.3.1.js" ></script>
-		<script src="jsEma.js"></script>
+		<!-- <script src="jsEma.js"></script>  -->
+		<script src="Enigme_prison.js"></script> 
+		<script src="stopwatch.js"></script>
 	</body>
 </html>
