--- a/lindexenigmePris.html
+++ b/lindexenigmePris.html
@@ -7,7 +7,7 @@
 		<title> Emanation
 		</title>
 	</head>
-	<body id="corps" class="corpsFond1">
+	<body id="corps">
 
 		<script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
 		<script src="http://code.jquery.com/jquery-3.3.1.js" ></script>
