--- a/lindex.html
+++ b/lindex.html
@@ -10,10 +10,11 @@
 	<body id="corps" class="corpsFond1">
 		<div id="frame"></div>
 		<div class="sprite" id="sprite1"></div><div class="sprite" id="sprite2"></div><div class="sprite" id="sprite3"></div>
-			<div class="charaName" id="charaBox">Inori</div>
+			<div class="charaName" id="charaBox">Fille de joie</div>
 					<div class="dialBox">
 							<button class ="boutons" id ="precedent"> Précedent </button>
-						<div id="text">	Quelle serait ta raison? Celle pour laquelle tu me détestais? Qu'ai je fais en cette maison? Pour me retrouver si isolée. </div>
+						<div id="text">	Page de garde
+ </div>
 							<button class ="boutons" id ="suivant"> Suivant </button>
 					</div>
 		
