update affichage fonctionnel (plein ecrans seulement)
les tours, discs, nombre de coups et boutton de verification: affiché

--- a/lindexenigmePris.html
+++ b/lindexenigmePris.html
@@ -7,22 +7,26 @@
 	</head>
 
 	<body id="corps">
-		<div id="grille"> 
-			<div id="tour1"> 
-				<div class="vide">	<div id="discR" draggable="true">	</div>	</div> 
-				<div class="vide">	<div id="discVio" draggable="true">	</div>	</div> 
-				<div class="vide">	<div id="discV" draggable="true">	</div>	</div> 
-				<div class="vide">	<div id="discJ" draggable="true">	</div>	</div> 
-				<div class="vide">	<div id="discB" draggable="true">	</div>	</div>
+		<div id="jeu"> 
+				<div class="menu">
+			<div id="movesNum">Coups:</div>
+			<div><button id="buttonVerif" type="button">vérifier</button></div>
+				</div>
+			<div class="tour" id="tour1"> 
+				<div class="vide">	<div class="disc" id="discR" draggable="true">	</div>	</div> 
+				<div class="vide">	<div class="disc" id="discVio" draggable="true">	</div>	</div> 
+				<div class="vide">	<div class="disc" id="discV" draggable="true">	</div>	</div> 
+				<div class="vide">	<div class="disc" id="discJ" draggable="true">	</div>	</div> 
+				<div class="vide">	<div class="disc" id="discB" draggable="true">	</div>	</div>
 			</div>			
-			<div id="tour2"> 
+			<div class="tour" id="tour2"> 
 				<div class="vide"></div> 
 				<div class="vide"></div> 
 				<div class="vide"></div> 
 				<div class="vide"></div> 
 				<div class="vide"></div>
 			</div>
-			<div id="tour3"> 
+			<div class="tour" id="tour3"> 
 				<div class="vide"></div> 
 				<div class="vide"></div> 
 				<div class="vide"></div> 
